fix minor spacing for my posts css

--- a/src/account/UserSettings.css
+++ b/src/account/UserSettings.css
@@ -66,6 +66,16 @@ button:hover {
   height: 1.5em;
 }
 
+/* My Posts */
+.post-card {
+  display: flex;
+  
+}
+
+.post-tags {
+  margin-bottom: 1em;
+}
+
 /* Personalize */
 .toggle {
   display: flex;
